# email-failure-lab

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  PLAN.md  README.md  ROADMAP.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  classification_case.md  feature_request.md
.github/workflows/: ci.yml
crates/email-failure-cli/: Cargo.toml
crates/email-failure-cli/src/: error.rs  main.rs  output.rs
crates/email-failure-cli/src/commands/: explain.rs  fixtures.rs  mod.rs
crates/email-failure-cli/tests/: cli.rs
crates/email-failure-core/: Cargo.toml
crates/email-failure-core/benches/: failure_paths.rs
crates/email-failure-core/fixtures/: cases.json
crates/email-failure-core/fixtures/providers/resend/: email-bounced-authentication-failure.json  email-bounced-invalid-recipient.json  email-bounced-temporary-failure-resend-like.json  email-failed-reached-daily-quota.json
crates/email-failure-core/fixtures/raw/: auth-failure.txt  invalid-recipient.txt  mailbox-full.txt  plain-bounce.eml
crates/email-failure-core/src/: classify.rs  fixtures.rs  lib.rs  model.rs  parse.rs  provider_payload.rs  recommend.rs  report.rs
crates/email-failure-core/tests/: fixture_catalog.rs  fixtures.rs  json_schema.rs  provider_payloads.rs
docs/: failure-categories.md  release-checklist.md
docs/rfcs/: 0001-provider-payload-parsing-v0.2.md
schemas/: failure-report.v0.1.json
