[workspace]
members = [
    "crates/email-failure-core",
    "crates/email-failure-cli",
]
resolver = "2"

[workspace.package]
description = "A Rust-powered CLI and core library for explaining transactional email failures."
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ralfferreira/email-failure-lab"
version = "0.1.0"
