[package]
name = "email-failure-cli"
description = "Command-line interface for Email Failure Lab."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "email-lab"
path = "src/main.rs"

[dependencies]
anstream = "1"
anstyle = "1"
clap = { version = "4", features = ["derive"] }
email-failure-core = { path = "../email-failure-core" }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
