[package]
name = "email-failure-core"
description = "Pure deterministic core for explaining transactional email failures."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
