[package]
name = "email-failure-core"
description = "Pure deterministic core for explaining transactional email failures."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false }
jsonschema = { version = "0.47", default-features = false }
serde = { version = "1", features = ["derive"] }

[[bench]]
name = "failure_paths"
harness = false
